--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
     <html>
         <head>
             <title>My First Repo</title>
-            <link rel="stylesheet" href="style.css"
+            <link rel="stylesheet" href="style.css">
         </head>
         <body>
             <h1>Hello, world!</h1>
